# vigil

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/vigil-cli/: Cargo.toml
crates/vigil-cli/src/: main.rs
crates/vigil-cli/tests/: cli_smoke.rs
crates/vigil-config/: Cargo.toml
crates/vigil-config/src/: lib.rs
crates/vigil-core/: Cargo.toml
crates/vigil-core/src/: lib.rs
crates/vigil-llm/: Cargo.toml
crates/vigil-llm/src/: lib.rs
crates/vigil-model/: Cargo.toml
crates/vigil-model/src/: lib.rs
crates/vigil-render/: Cargo.toml
crates/vigil-render/src/: lib.rs
crates/vigil-render/tests/fixtures/: evidence_brief.md
docs/: cloudflare-ai-gateway.md  commands.md  configuration.md  getting-started.md  goal.md  implementation-notes.md  input-format.md  output-format.md  security-and-privacy.md  troubleshooting.md
examples/minimal/: alert.yaml  inventory.yaml
examples/minimal/runbooks/: web-5xx.yaml
