[workspace]
resolver = "2"
members = [
    "crates/vigil-cli",
    "crates/vigil-config",
    "crates/vigil-core",
    "crates/vigil-llm",
    "crates/vigil-model",
    "crates/vigil-render",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viasnake/vigil"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
jsonschema = "0.18"
minijinja = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
