[package]
name = "vigil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
vigil-config = { path = "../vigil-config" }
vigil-core = { path = "../vigil-core" }
vigil-llm = { path = "../vigil-llm" }
vigil-render = { path = "../vigil-render" }

[lints]
workspace = true
