[package]
name = "vigil-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
