[package]
name = "vigil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
vigil-llm = { path = "../vigil-llm" }
vigil-model = { path = "../vigil-model" }

[dev-dependencies]
tempfile = "3"
tokio.workspace = true

[lints]
workspace = true
